feat: trigger initial release

--- a/packages/ui/index.html
+++ b/packages/ui/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   <link href="src/tailwind/tailwind.output.css" rel="stylesheet" />
-  <title>Lunnoa Automate Demo Tool - AI Agents and Workflow Automation</title>
+  <title>Lunnoa Automate Demo - AI Agents and Workflow Automation</title>
 </head>
 
 <body class="h-full">
